--- a/Crime Project/Crimes.ipynb
+++ b/Crime Project/Crimes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 196,
    "id": "ba81b635-bd6a-4fa5-b792-82a6199b59c5",
    "metadata": {},
    "outputs": [],
@@ -12,39 +12,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "8c7f0f12-e624-47c6-be50-dc93e0a65963",
+   "execution_count": 197,
+   "id": "caa306b5-ba3d-4566-9b57-77a4e918c70b",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'pandas' has no attribute 'read_c'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m median_income \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_c\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'pandas' has no attribute 'read_c'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "median_income = pd.read_c"
+    "from api_key import api_key_census\n",
+    "import requests\n",
+    "\n",
+    "#For getting median_income from API"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 198,
    "id": "2b07109e-9d22-462e-9056-81abecb09ab3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "crime = pd.read_csv('crime_data.csv')"
+    "crime_df = pd.read_csv('crime_data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 199,
    "id": "87b1fa79-e540-4726-a776-08b73fb2a634",
    "metadata": {},
    "outputs": [],
@@ -54,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 200,
    "id": "a3f9db31-1dcc-4680-9e8e-1ca1b51c8eb3",
    "metadata": {},
    "outputs": [
@@ -320,32 +311,30 @@
        "4                         1900    TRANSIENT          NaN  34.0944 -118.3277  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "crime.head(5)"
+    "crime_df.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 201,
    "id": "0631f4f3-cf1e-4f4e-8b09-3c06dc58a986",
    "metadata": {},
    "outputs": [],
    "source": [
-    "crime.columns = crime.columns.str.lower().str.replace(' ', '-')"
+    "crime_df.columns = crime.columns.str.lower().str.replace(' ', '_')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "1066dec9-92ac-4943-b759-9ae772bfc871",
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 202,
+   "id": "68dad377-9616-49c2-93b4-f857782f8a94",
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -369,31 +358,31 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>dr_no</th>\n",
-       "      <th>date-rptd</th>\n",
-       "      <th>date-occ</th>\n",
-       "      <th>time-occ</th>\n",
+       "      <th>date_rptd</th>\n",
+       "      <th>date_occ</th>\n",
+       "      <th>time_occ</th>\n",
        "      <th>area</th>\n",
-       "      <th>area-name</th>\n",
-       "      <th>rpt-dist-no</th>\n",
-       "      <th>part-1-2</th>\n",
-       "      <th>crm-cd</th>\n",
-       "      <th>crm-cd-desc</th>\n",
+       "      <th>area_name</th>\n",
+       "      <th>rpt_dist_no</th>\n",
+       "      <th>part_1-2</th>\n",
+       "      <th>crm_cd</th>\n",
+       "      <th>crm_cd_desc</th>\n",
        "      <th>mocodes</th>\n",
-       "      <th>vict-age</th>\n",
-       "      <th>vict-sex</th>\n",
-       "      <th>vict-descent</th>\n",
-       "      <th>premis-cd</th>\n",
-       "      <th>premis-desc</th>\n",
-       "      <th>weapon-used-cd</th>\n",
-       "      <th>weapon-desc</th>\n",
+       "      <th>vict_age</th>\n",
+       "      <th>vict_sex</th>\n",
+       "      <th>vict_descent</th>\n",
+       "      <th>premis_cd</th>\n",
+       "      <th>premis_desc</th>\n",
+       "      <th>weapon_used_cd</th>\n",
+       "      <th>weapon_desc</th>\n",
        "      <th>status</th>\n",
-       "      <th>status-desc</th>\n",
-       "      <th>crm-cd-1</th>\n",
-       "      <th>crm-cd-2</th>\n",
-       "      <th>crm-cd-3</th>\n",
-       "      <th>crm-cd-4</th>\n",
+       "      <th>status_desc</th>\n",
+       "      <th>crm_cd_1</th>\n",
+       "      <th>crm_cd_2</th>\n",
+       "      <th>crm_cd_3</th>\n",
+       "      <th>crm_cd_4</th>\n",
        "      <th>location</th>\n",
-       "      <th>cross-street</th>\n",
+       "      <th>cross_street</th>\n",
        "      <th>lat</th>\n",
        "      <th>lon</th>\n",
        "    </tr>\n",
@@ -746,7 +735,7 @@
        "</div>"
       ],
       "text/plain": [
-       "            dr_no               date-rptd                date-occ  time-occ  \\\n",
+       "            dr_no               date_rptd                date_occ  time_occ  \\\n",
        "0       190326475  03/01/2020 12:00:00 AM  03/01/2020 12:00:00 AM      2130   \n",
        "1       200106753  02/09/2020 12:00:00 AM  02/08/2020 12:00:00 AM      1800   \n",
        "2       200320258  11/11/2020 12:00:00 AM  11/04/2020 12:00:00 AM      1700   \n",
@@ -759,7 +748,7 @@
        "944233  240309674  04/24/2024 12:00:00 AM  04/24/2024 12:00:00 AM      1500   \n",
        "944234  240900704  04/29/2024 12:00:00 AM  04/29/2024 12:00:00 AM      2020   \n",
        "\n",
-       "        area  area-name  rpt-dist-no  part-1-2  crm-cd  \\\n",
+       "        area  area_name  rpt_dist_no  part_1-2  crm_cd  \\\n",
        "0          7   Wilshire          784         1     510   \n",
        "1          1    Central          182         1     330   \n",
        "2          3  Southwest          356         1     480   \n",
@@ -772,7 +761,7 @@
        "944233     3  Southwest          358         1     230   \n",
        "944234     9   Van Nuys          916         2     740   \n",
        "\n",
-       "                                              crm-cd-desc  \\\n",
+       "                                              crm_cd_desc  \\\n",
        "0                                        VEHICLE - STOLEN   \n",
        "1                                   BURGLARY FROM VEHICLE   \n",
        "2                                           BIKE - STOLEN   \n",
@@ -785,7 +774,7 @@
        "944233     ASSAULT WITH DEADLY WEAPON, AGGRAVATED ASSAULT   \n",
        "944234  VANDALISM - FELONY ($400 & OVER, ALL CHURCH VA...   \n",
        "\n",
-       "                              mocodes  vict-age vict-sex vict-descent  \\\n",
+       "                              mocodes  vict_age vict_sex vict_descent  \\\n",
        "0                                 NaN         0        M            O   \n",
        "1                      1822 1402 0344        47        M            O   \n",
        "2                           0344 1251        19        X            X   \n",
@@ -798,7 +787,7 @@
        "944233  1822 0334 0416 0445 0449 1202        70        F            W   \n",
        "944234       0342 0329 1402 0311 1822        37        M            H   \n",
        "\n",
-       "        premis-cd                                   premis-desc  \\\n",
+       "        premis_cd                                   premis_desc  \\\n",
        "0           101.0                                        STREET   \n",
        "1           128.0             BUS STOP/LAYOVER (ALSO QUERY 124)   \n",
        "2           502.0  MULTI-UNIT DWELLING (APARTMENT, DUPLEX, ETC)   \n",
@@ -811,7 +800,7 @@
        "944233      102.0                                      SIDEWALK   \n",
        "944234      122.0                      VEHICLE, PASSENGER/TRUCK   \n",
        "\n",
-       "        weapon-used-cd                                     weapon-desc status  \\\n",
+       "        weapon_used_cd                                     weapon_desc status  \\\n",
        "0                  NaN                                             NaN     AA   \n",
        "1                  NaN                                             NaN     IC   \n",
        "2                  NaN                                             NaN     IC   \n",
@@ -824,7 +813,7 @@
        "944233           308.0                                           STICK     IC   \n",
        "944234             NaN                                             NaN     IC   \n",
        "\n",
-       "         status-desc  crm-cd-1  crm-cd-2  crm-cd-3  crm-cd-4  \\\n",
+       "         status_desc  crm_cd_1  crm_cd_2  crm_cd_3  crm_cd_4  \\\n",
        "0       Adult Arrest     510.0     998.0       NaN       NaN   \n",
        "1        Invest Cont     330.0     998.0       NaN       NaN   \n",
        "2        Invest Cont     480.0       NaN       NaN       NaN   \n",
@@ -850,7 +839,7 @@
        "944233           FLOWER                       ST   \n",
        "944234   6800    HAZELTINE                    AV   \n",
        "\n",
-       "                           cross-street      lat       lon  \n",
+       "                           cross_street      lat       lon  \n",
        "0                                   NaN  34.0375 -118.3506  \n",
        "1                                   NaN  34.0444 -118.2628  \n",
        "2                                   NaN  34.0210 -118.3002  \n",
@@ -866,14 +855,106 @@
        "[944235 rows x 28 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "crime"
+    "crime_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "id": "9a4d28be-793c-40ed-8efd-26a6d31ee03a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crime_df[\"date_rptd\"] = crime_df[\"date_rptd\"].str.split().str[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "id": "eafdfcef-c181-4b7f-94c5-bec53b28b8f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crime_df[\"date_rptd\"] = pd.to_datetime(crime_df[\"date_rptd\"], format=\"%m/%d/%Y\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "id": "563c4f2d-e9af-4405-8330-0cfb0dec7672",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 944235 entries, 0 to 944234\n",
+      "Data columns (total 28 columns):\n",
+      " #   Column          Non-Null Count   Dtype         \n",
+      "---  ------          --------------   -----         \n",
+      " 0   dr_no           944235 non-null  int64         \n",
+      " 1   date_rptd       944235 non-null  datetime64[ns]\n",
+      " 2   date_occ        944235 non-null  object        \n",
+      " 3   time_occ        944235 non-null  int64         \n",
+      " 4   area            944235 non-null  int64         \n",
+      " 5   area_name       944235 non-null  object        \n",
+      " 6   rpt_dist_no     944235 non-null  int64         \n",
+      " 7   part_1-2        944235 non-null  int64         \n",
+      " 8   crm_cd          944235 non-null  int64         \n",
+      " 9   crm_cd_desc     944235 non-null  object        \n",
+      " 10  mocodes         811136 non-null  object        \n",
+      " 11  vict_age        944235 non-null  int64         \n",
+      " 12  vict_sex        817640 non-null  object        \n",
+      " 13  vict_descent    817630 non-null  object        \n",
+      " 14  premis_cd       944225 non-null  float64       \n",
+      " 15  premis_desc     943668 non-null  object        \n",
+      " 16  weapon_used_cd  324477 non-null  float64       \n",
+      " 17  weapon_desc     324477 non-null  object        \n",
+      " 18  status          944235 non-null  object        \n",
+      " 19  status_desc     944235 non-null  object        \n",
+      " 20  crm_cd_1        944224 non-null  float64       \n",
+      " 21  crm_cd_2        68258 non-null   float64       \n",
+      " 22  crm_cd_3        2281 non-null    float64       \n",
+      " 23  crm_cd_4        64 non-null      float64       \n",
+      " 24  location        944235 non-null  object        \n",
+      " 25  cross_street    147592 non-null  object        \n",
+      " 26  lat             944235 non-null  float64       \n",
+      " 27  lon             944235 non-null  float64       \n",
+      "dtypes: datetime64[ns](1), float64(8), int64(7), object(12)\n",
+      "memory usage: 201.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "crime_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "id": "c258c498-b311-49e3-8b07-f706601d8028",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Add new colimn: month\n",
+    "crime_df['year'] = crime_df['date_rptd'].dt.year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "id": "75cd13ce-188d-4643-9228-b7b865de0807",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crime_df[\"vict_sex\"] = crime_df[\"vict_sex\"].str.replace(\"H\", \"X\").str.replace(\"-\", \"X\")"
    ]
   },
   {
@@ -889,31 +970,70 @@
     "#gender and age of victim/per location\n",
     "# % of arrested criminals/divided for cat.crime \n",
     "# crime with weapon\n",
-    "#divide in 4 dataset- for respective gravity code crm cd 1 etc \n",
+    "#divide in 4 dataset- for respective gravity code crm cd 1 etc "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "2dd7bba1-9249-42c8-b267-e610fbdb27e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://api.census.gov/data/2019/acs/acs5?get=NAME,B19013_001E&for=county subdivision:*&in=state:06 county:037&key=c8ece4d4c8d1f906496a288719673264f36c2dd2\n",
+      "                                                NAME B19013_001E state county  \\\n",
+      "0        Newhall CCD, Los Angeles County, California      102716    06    037   \n",
+      "1   Palos Verdes CCD, Los Angeles County, California      117750    06    037   \n",
+      "2  Downey-Norwalk CCD, Los Angeles County, Califo...       70795    06    037   \n",
+      "3       Whittier CCD, Los Angeles County, California       76938    06    037   \n",
+      "4  South Gate-East Los Angeles CCD, Los Angeles C...       46492    06    037   \n",
+      "\n",
+      "  county subdivision  \n",
+      "0              92110  \n",
+      "1              92360  \n",
+      "2              90730  \n",
+      "3              93730  \n",
+      "4              93155  \n"
+     ]
+    }
+   ],
+   "source": [
+    "#API getting medin_income by diision\n",
     "\n",
-    "\n"
+    "# Your Census API key\n",
+    "api_key = api_key_census\n",
+    "# API endpoint for the American Community Survey (ACS)\n",
+    "base_url = 'https://api.census.gov/data/2019/acs/acs5'\n",
+    "# Variables to retrieve (e.g., median household income)\n",
+    "variables = ['NAME', 'B19013_001E']\n",
+    "# Specify the geographic area (Los Angeles County, CA)\n",
+    "for_clause = 'county subdivision:*'\n",
+    "in_clause = 'state:06 county:037'\n",
+    "# Construct the full API request URL\n",
+    "print(f\"{base_url}?get={','.join(variables)}&for={for_clause}&in={in_clause}&key={api_key}\")\n",
+    "api_url = f\"{base_url}?get={','.join(variables)}&for={for_clause}&in={in_clause}&key={api_key}\"\n",
+    "# Make the GET request to the Census API\n",
+    "response = requests.get(api_url)\n",
+    "# Check if the request was successful\n",
+    "if response.status_code == 200:\n",
+    "    # Parse the JSON response into a DataFrame\n",
+    "    data = response.json()\n",
+    "    df = pd.DataFrame(data[1:], columns=data[0])\n",
+    "    # Display the first few rows of the DataFrame\n",
+    "    print(df.head())\n",
+    "else:\n",
+    "    print(f\"Failed to retrieve data. Status code: {response.status_code}\")\n",
+    "# Optional: Save the data to a CSV file\n",
+    "df.to_csv('average_income_by_district.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0e23b18-1c84-4f8b-880e-e766b9ce6fdf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a2357101-ba4c-4a24-8976-379f55347321",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2dd7bba1-9249-42c8-b267-e610fbdb27e2",
+   "id": "1af10381-e8ec-41d8-9ca0-3d4ba434b49a",
    "metadata": {},
    "outputs": [],
    "source": []
